about and publications

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,3 +6,31 @@ Podolsky:
 
 Rosen:
     url: https://en.wikipedia.org/wiki/Nathan_Rosen
+
+Dematties:
+    url: https://www.researchgate.net/profile/Dario_Dematties
+
+Rizzi:
+    url: https://www.alcf.anl.gov/about/people/silvio-rizzi
+
+Thiruvathukal:
+    url: https://www.luc.edu/cs/people/ftfaculty/gkt.shtml
+
+Pérez:
+    url: https://katalog.uu.se/profile/?id=N17-1897
+
+Zanutto:
+    url: https://ri.conicet.gov.ar/author/6427?pagina=0
+
+Wainselboim:
+    url: https://scholar.google.com.ar/citations?hl=es&user=CdVkS2cAAAAJ&view_op=list_works&sortby=pubdate
+
+Mattsson:
+    url: https://katalog.uu.se/empinfo/?id=N18-279
+
+Augustine:
+    url: https://katalog.uu.se/profile/?id=N11-2151
+
+Perez:
+    url: https://katalog.uu.se/profile/?id=N17-1897
+
